# robot_simulation

./: .all-contributorsrc  .gitignore  README.md
Submissions/: README.md
beginner_tutorial/: LineParam.cfg  main.py  package.xml
beginner_tutorial/src/: keyboard_teleop.py  listener.py  talker.py
digitizer/: .gitignore  CMakeLists.txt  README.md  package.xml
digitizer/cfg/: Digitizer.cfg
digitizer/launch/: gazebo_rev2.launch
digitizer/submissions/Aditya/: 10thOct.py
digitizer/submissions/Arnab/: april.py  ros.py
digitizer/submissions/Prats/: digitizer_track.cpp  server_digitizer.py
digitizer/worlds/: arena.world  final.world
drone_orbit/: README.md  package.xml
drone_orbit/launch/: practice_arena_with_drone.launch
drone_orbit/submissions/Prats/dynamic_tutorials/: CMakeLists.txt  package.xml
drone_orbit/submissions/Prats/dynamic_tutorials/cfg/: Tutorials.cfg
drone_orbit/submissions/Prats/dynamic_tutorials/src/: server.cpp  server.py
drone_orbit/world/: practice_arena.world
dynamic_tutorials/: CMakeLists.txt  package.xml
iarc_arena/: CMakeLists.txt  README.md  package.xml
iarc_arena/launch/: iarc_gnd.launch  iarc_sea.launch
iarc_arena/src/: pillion_traj.py
iarc_arena/world/: arena_gnd.world  arena_sea.world
line_follower/: CMakeLists.txt  README.md  package.xml
line_follower/cfg/: LineParam.cfg
line_follower/src/: main.py
line_follower/submissions/Prats/: move2.py
line_follower/submissions/Prats/dynamic_tutorials/: CMakeLists.txt  package.xml
line_follower/submissions/Prats/dynamic_tutorials/cfg/: Tutorials.cfg
line_follower/submissions/Prats/dynamic_tutorials/src/: server.cpp
line_follower/submissions/Prats/line_follower/: CMakeLists.txt
line_follower/submissions/Prats/line_follower/src/: move.py  pid.py
mobile_robot_description/: CMakeLists.txt  package.xml
mobile_robot_description/launch/: spawn_mobile_robot.launch  spawn_mobile_robot_with_cam.launch  spawn_mobile_robot_with_cam_with_lidar.launch  spawn_mobile_robot_with_lidar.launch
mobile_robot_description/meshes/generic_camera/: base_link.STL  camera.STL
mobile_robot_description/meshes/lidar/: lidar.STL
mobile_robot_description/urdf/: camera.xacro  generic_camera.urdf.xacro  lidar.urdf.xacro  mobile_robot.urdf.xacro  mobile_robot_base.urdf.xacro  mobile_robot_with_cam.urdf.xacro  mobile_robot_with_cam_with_lidar.urdf.xacro  mobile_robot_with_lidar.urdf.xacro
