<?xml version="1.0"?>
<package format="2">
  <name>drone_orbit</name>
  <version>0.0.0</version>
  <description>The drone_orbit package</description>
  <maintainer email="arnabgudu.gs@gmail.com">Arnab Paikaray</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
