<?xml version="1.0"?>
<package format="2">
  <name>iarc_arena</name>
  <version>0.0.0</version>
  <description>The iarc drone package</description>
  <maintainer email="arnabgudu.gs@gmail.com">Arnab Paikaray</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
