<?xml version="1.0"?>
<package format="2">
  <name>mobile_robot_description</name>
  <version>0.0.0</version>
  <description>The mobile_robot_description package</description>
  <maintainer email="arnabgudu.gs@gmail.com">Arnab Paikaray</maintainer>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
